[package]
name = "tasq"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tasq"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
rusqlite = "0.31"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
